# MROVER

./: .gitignore  README.md  setup.bash
arduino/: encoderpublisher.ino
catkin_ws/src/data_collection/scripts/: data_collections.py
catkin_ws/src/mobile_robot_autonomous_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/mobile_robot_autonomous_navigation/config/: joint_limits.yaml
catkin_ws/src/mobile_robot_autonomous_navigation/include/mobile_robot_autonomous_navigation/: robot_hardware_interface.h
catkin_ws/src/mobile_robot_autonomous_navigation/launch/: robot_hw_interface.launch
catkin_ws/src/mobile_robot_autonomous_navigation/src/: robot_hardware_interface.cpp
catkin_ws/src/mrover/: CMakeLists.txt  package.xml
catkin_ws/src/mrover/config/: ackermann_steer.yaml  ackermann_steer_sim.yaml  ackermansteer.yaml  ekf_se_odom.yaml  gains.yaml  joint_state_publisher.yaml  joystic_param.yaml  joystic_param_sim.yaml  px4_config.yaml  px4_config_imu.yaml  px4_pluginlists.yaml
catkin_ws/src/mrover/config2/: ctrl_ackermann_steering_controller.yaml  ctrl_steer_bot_hardware_gazebo.yaml
catkin_ws/src/mrover/launch/: mrover_gazebo.launch  mrover_gazebo_diff.launch  mrover_gz.launch  mroverpx4_2.launch  online_async1.launch  (+2 more)
config/conda/: environment.yaml  environment.yml
config/data_collection/: rover_dara.yaml  rover_template.yaml
dev_ws/src/data_collection/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dev_ws/src/mrover/: CMakeLists.txt  package.xml
dev_ws/src/run_neural/: CMakeLists.txt  package.xml  setup.cfg  setup.py
neural_net/: net_model.py
(+122 files in other folders)
